stylesheet.css
/* ... */
.tag-Math {
  background-color: lightskyblue;
}

.tag-Biology {
  background-color: greenyellow;
  
}

.tag-English {
  background-color: red;
  
}

.tag-History {
  background-color: darkorange;
  
}

.user_info_container {
    display: flex;
    align-items: center;
    padding-bottom: 20px;
    width: 100%;
}

.user_info_container > img {
    height: 35px;
    width: 35px;
    border-radius: 100%;
    box-shadow: 0px 0px 20px var(--shadow_color);
}

.user_info_container > *{
    margin-right: 10px;
    font-size: large;
    color: var(--details_font_color);

}
.user_info_container > .username, .user_info_container > .date{
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}


.user_tag {
    padding: 3px 10px;
    border-radius: 5px;
    background-color: var(--details_font_color);

    font-size: small;
    font-weight: medium;
    color: var(--tag_font_color);
}

.interaction_container {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 20px;
    width: 100%;
}

.interaction_container > * {
    font-size: large;
}

.interaction_container > .post_like_count {
    margin-right: 30px;
}

.interaction_container > .post_comment_count {
    margin-right: 20px;
}

.interaction_container > i {
    padding: 5px;
    margin-right: 2px;
    border-radius: 100%;
    background-clip: border-box;
    z-index: 2;
}

.interaction_container > i:hover {
    background-color: var(--post_interaction_color);
    cursor: pointer;
}
/*Post, comment and subcomment style end*/

/*Tooltip style start*/
.tooltip {
    position: relative;
}

.tooltip > .tooltip_text {
    font-size: 18px;
    visibility: hidden;
    background-color: var(--tooltip_background_color);
    color: var(--tag_font_color);
    text-align: center;
    border-radius: 5px;
    padding: 5px 10px;
    position: absolute;
    z-index: 1;
    top: 110%;
    left: 50%;
    transform: translate(-50%, 0);
    opacity: 0;
    transition: opacity 1s;
}

.tooltip .tooltip_text::after {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translate(-50%, 0);
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent var(--tooltip_background_color) transparent;
  }

.tooltip:hover > .tooltip_text{
  visibility: visible;
  opacity: 0.9;
}
/*Tooltip style end*/

/*Main-page style start*/
.main_content_container {
    display: flex;
    flex-direction: column;
    width: 80%;
    margin-left: 30px;
    padding: 20px;
    border-radius: 15px;
    background-color: var(--secondary_background_color);
}

.main_content_title {
    font-size: 38px;
    font-weight: bold;
    margin-bottom: 30px;
    color: var(--text_font_color)
}

.main_content_posts > .post_container {
    flex-direction: row;
    align-items: center;
    margin-bottom: 30px;
}

.main_content_posts .post_container:hover {
    transform: scale(1.02);
    cursor: pointer;
}

.main_content_posts {
    width: 100%;
    display: flex;
    gap: 20px;
}

.column {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.main_content_posts > .post_container > .post_image_container {
    flex: 0 0 auto;
    background-color: var(--primary_background_color);
    border-radius: 15px;
    margin-left: 30px;

    height: 300px;
    width: 300px;
}

.post_image_container > img {
    object-fit: contain;
    height: 100%;
    width: 100%;
    border-radius: 20px;
    margin-top: -3px;
}
/*Main-page style end*/

/*Thread-page style start*/
.thread_content_container {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-left: 30px;
    padding: 30px;
    border-radius: 15px;
    background-color: var(--secondary_background_color);
}

.thread_content_container > .post_container {
    padding: 30px;
}

.solution_container {
    display: flex;
    flex-direction: row;
    margin-top: 30px;
    width: 100%;
}

.solution_container > * {
    margin-top: 0px;
}

.solution_sign {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50px;
}

.solution_sign > div {
    background-color: var(--primary_color);
    width: 3px;
    height: 35%;
    border-radius: 10px;
}

.solution_sign > i {
    width: 24px;
    margin: 8px 0px;
    font-weight: bold;
    color: var(--primary_color);
}

.original_poster > .user_info_container > .username {
    font-weight: bold;
    color: var(--primary_color);
}

.reply_button {
    border-radius: 30px;
    padding: 6.5px 10px;
    font-weight: bold;
    background-clip: border-box;
}

.reply_button:hover {
    background-color: var(--details_font_color);
    cursor: pointer;
}

.thread_content_container form {
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.thread_content_container form > .comment_box {
    border: none;
    border-bottom: solid var(--details_font_color);
    border-width: 3px;
    padding-bottom: 5px;
    background-color: var(--secondary_background_color);
}

.thread_content_container form > .comment_box:focus {
    outline: none;
    border-color: var(--text_font_color);
}

.thread_content_container form > .submit_button {
    margin-top: 10px;
    width: 100px;
    margin-left: auto;
    padding: 10px 20px;
    border-radius: 50px;
    background-color: var(--primary_color);
    border: none;

    font-size: large;
    font-weight: bold;
    text-decoration: none;
    color: var(--tag_font_color);
}

.thread_content_container form > .submit_button:hover {
    background-color: var(--primary_complement_hover);
    cursor: pointer;
}

/*Thread-page style end*/


/*New-thread page style start*/
.new_post_title {
  font-size: xx-large;
  font-weight: bold;
  margin-bottom: 10px;
  width: 100%;
  color: var(--title_font_color);

  padding: 10px;
  border-radius: 15px;
  height: 40px;
  box-shadow: 0px 0px 20px rgba(100, 100, 100, 0.2);
  outline: none;
}
/* ... */

